k8s/lb-dep.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: helloworld-lb-50001
spec:
  selector:
    matchLabels:
      app: helloworld
  replicas: 3
  template:
    metadata:
      labels:
        app: helloworld
    spec:
      containers:
        - name: helloworld-container
          image: grumpykai/nodejstest
