k8s/pod.yml
apiVersion: v1
kind: Pod
metadata:
  name: helloworld-pod
  labels:
    name: helloworld-pod
spec:
  containers:
    - name:
      image: grumpykai/nodejstest
      ports:
        - containerPort: 8080
