k8s/lb-srv.yml
apiVersion: v1
kind: Service
metadata:
  name: hw-lb-service
spec:
  type: LoadBalancer
  selector:
    app: helloworld-pod
  ports:
    - protocol: TCP
      port: 60000
      targetPort: 8080
