k8s/service.yml
apiVersion: v1
kind: Service
metadata:
  name: helloworld-srv
spec:
  selector:
    app: helloworld-pod
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
